--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Portfolio - DH</title>
+  <title>Portfolio | DH</title>
   <link rel="stylesheet" href="/css/main.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -62,6 +62,11 @@
     <!-- Hero content: will be in the middle -->
     <div class="hero-body">
       <div class="container has-text-centered">
+        <picture alt="Developer in front of comuter">
+          <source media="(min-width: 500px)" srcset="./img/dev-icon-inverted-275x275.png"/>
+          <img src="./img/dev-icon-inverted-175x175.png" />
+        </picture>
+
         <h1 class="title is-size-3-mobile is-size-2-tablet is-size-1-desktop">
           Donavin Hannon
         </h1>
@@ -108,7 +113,7 @@
               <img src="http://bulma.io/images/placeholders/640x480.png">
             </figure>
             <div class="content">
-              <a class="button button--start is-light" href="https://www.calaska.org/" target="_blank">
+              <a class="button button--start is-light" href="https://www.calaska.org/?utm_source=portfolio&utm_medium=button" target="_blank">
                 <span class="icon">
                   <i class="fa fa-link"></i>
                 </span>
@@ -130,10 +135,10 @@
             <h3 class="title is-size-4-touch">10 Day Weather</h3>
             <p class="subtitle is-size-5-touch">Api's, Bootstrap 3</p>
             <figure class="image is-4by3">
-              <img src="http://bulma.io/images/placeholders/640x480.png">
+              <img src="//placehold.it/640x480/">
             </figure>
             <div class="content">
-              <a class="button button--start is-light" href="https://github.io/Doanvin/weather-by-burr" target="_blank">
+              <a class="button button--start is-light" href="https://doanvin.github.io/weather-by-burr" target="_blank">
                 <span class="icon">
                   <i class="fa fa-link"></i>
                 </span>
@@ -155,10 +160,10 @@
             <h3 class="title is-size-4-touch">Recipe App</h3>
             <p class="subtitle is-size-5-touch">Angular</p>
             <figure class="image is-4by3">
-              <img src="http://bulma.io/images/placeholders/640x480.png">
+              <img src="//bulma.io/images/placeholders/640x480.png">
             </figure>
             <div class="content">
-              <a class="button button--start is-light" href="https://github.io/Doanvin/first-angular-app" target="_blank">
+              <a class="button button--start is-light" href="https://doanvin.github.io/first-angular-app" target="_blank">
                 <span class="icon">
                   <i class="fa fa-link"></i>
                 </span>
@@ -185,7 +190,7 @@
               <img src="http://bulma.io/images/placeholders/640x480.png">
             </figure>
             <div class="content">
-              <a class="button button--start is-light" title="You're already here!" href="https://github.io/Doanvin/portfolio" target="_blank" disabled>
+              <a class="button button--start is-light" title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
                 <span class="icon">
                   <i class="fa fa-link"></i>
                 </span>
@@ -302,7 +307,7 @@
     // Select the email from contact form
     var email = document.forms['contact']['_replyto'].value;
 
-    // Check if email is valid using regex, return false if not valid
+    // Check if email is valid using regex, alert and return false if not valid
     if (/(\w|\.|-)+@(\w|-){2,22}\.((\w{2,5}\.\w{2,5})|(\w{2,12}))/.test(email) != true) {
         alert('The email address entered is not valid.  Please enter a valid email address.');
         return false;
