--- a/src/index.html
+++ b/src/index.html
@@ -62,10 +62,10 @@
     <!-- Hero content: will be in the middle -->
     <div class="hero-body">
       <div class="container has-text-centered">
-        <picture alt="Developer in front of computer">
-          <source media="(min-width: 500px)" srcset="./img/dev-icon-inverted-275x275.png">
-          <source media="(max-width: 499px)" srcset="./img/dev-icon-inverted-175x175.png">
-          <img src="./img/dev-icon-inverted-175x175.png">
+        <picture>
+          <source media="(max-width: 359px)" srcset="./img/dev-icon-inverted-175x175.svg" type="image/svg+xml"/>
+          <source media="(min-width: 360px)" srcset="./img/dev-icon-inverted-275x275.svg" type="image/svg+xml"/>
+          <img srcset="./img/dev-icon-inverted-175x175.png" alt="Developer in front of computer"/>
         </picture>
 
         <h1 class="title is-size-3-mobile is-size-2-tablet is-size-1-desktop">
