Added about info, tiles, box, blinking down arrow

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
     <!-- Hero footer: will stick at the bottom -->
     <div class="hero-foot">
       <div class="container has-text-centered">
-        <a class="angle-down" href="#about">
+        <a class="angle-down is-blinking" href="#about">
           <i class="fa fa-angle-down fa-4x" aria-hidden="true"></i>
         </a>
       </div>
@@ -90,10 +90,54 @@
   <section class="section" id="about">
     <div class="container">
       <h2 class="title is-size-2 has-text-centered">About</h2>
-      <p class="subtitle has-text-centered">
-        About me.
-      </p>
+
+
+      <div class="tile is-ancestor">
+        <div class="tile is-vertical is-4">
+          <div class="tile">
+            <div class="tile is-parent">
+              <article class="tile is-child box is-info">
+                <p class="title">1</p>
+                <p class="subtitle">Curiosity and an interest in technology drew me into the world of programming and development. I am a self taught developer with a passion for technology.</p>
+              </article>
+            </div>
+          </div>
+        </div>
+
+        <div class="tile is-8">
+          <div class="tile is-parent">
+            <article class="tile is-child box is-primary">
+              <p class="title">2</p>
+              <p class="subtitle">In high school I ran multiple affiliate marketing websites, one of which made anywhere from $2-$3k per month.  This is when I learned HTML, CSS, and a little bit of JavaScript and PHP.  Ultimately, I decided to pursue a degree in health care, but I always had the tech field as my fall-back plan.  In 2015, I graduated from the University of Nevada, Reno with a Bachelors of Science in Community Health Sciences.</p>
+            </article>
+          </div>
+        </div>
+      </div>
+
+      <div class="tile is-ancestor">
+        <div class="tile is-8">
+          <div class="tile is-parent">
+            <article class="tile is-child box is-danger">
+              <p class="title">3</p>
+              <p class="subtitle">At the end of my junior year I realized that the health field wasn’t where I wanted to end up, but instead of switching majors I decided to finish my degree and explore career options later.  Since I had a health sciences degree, I thought about a career as an epidemiologist so I began to learn about data analysis using python (pandas). After some some data analysis and web scraping projects, I made the choice to move away from health and commit all my time to web development.</p>
+              <div class="content">
+                <!-- Content -->
+              </div>
+            </article>
+          </div>
+        </div>
+        <div class="tile is-4">
+          <div class="tile is-parent">
+            <article class="tile is-child box is-warning">
+              <p class="title">4</p>
+              <p class="subtitle">I took two web development classes in high school and enjoyed the experience.  These fond memories along with an abundance of learning material on the net led me to commit to learning web development. I am currently seeking full-time employment as a web developer.</p>
+            </article>
+          </div>
+        </div>
+      </div>
+
     </div>
+
   </section>
 
   <section class="section" id="projects">
